# CodeGeeX4

./: LICENSE  MODEL_LICENSE  README.md  README_ja.md  README_zh.md
candle_demo/: Cargo.toml  README.md  README.org  README_zh.md
candle_demo/api-server/: Cargo.toml
candle_demo/api-server/src/: api.rs  args.rs  main.rs  model.rs  server.rs
candle_demo/cli/: Cargo.toml
candle_demo/cli/src/: main.rs
candle_demo/codegeex4/: Cargo.toml
candle_demo/codegeex4/src/: api.rs  codegeex4.rs  lib.rs  stream.rs
candle_demo/gui/: Cargo.toml
candle_demo/server/: Cargo.toml
candle_demo/src/: codegeex4.rs  lib.rs  main.rs
function_call_demo/: README.md  README_zh.md  main.py  requirements.txt
guides/: Infilling_guideline.md  Infilling_guideline_zh.md  Local_mode_guideline.md  Local_mode_guideline_zh.md  Repository_tasks_guideline.md  Repository_tasks_guideline_zh.md  System_prompt_guideline.md  System_prompt_guideline_zh.md
interpreter_demo/: Dockerfile.sandbox  README.md  README_zh.md  SANDBOX.md  app.py  sandbox.py  sandbox_tests.py
langchain_demo/: README.md  README_zh.md  chat.py  requirements.txt  vectorize.py
langchain_demo/models/: codegeex.py  embedding.py
langchain_demo/utils/: data.py  prompts.py  vector.py
llamaindex_demo/: README.md  README_zh.md  chat.py  requirements.txt  vectorize.py
llamaindex_demo/models/: codegeex.py  embedding.py  synthesizer.py
llamaindex_demo/utils/: data.py  prompts.py  vector.py
local_mode/: README.md  README_zh.md  main.py  requirements.txt
local_mode/models/: codegeex.py
local_mode/protocols/: openai_api.py
local_mode/services/: chat.py
metric/: README.md  README_zh.md
repodemo/: .env  chainlit.md  chainlit_zh-CN.md  readme.md  readme_zh.md  requirements.txt  run.py  run_local.py
repodemo/.chainlit/: config.toml
repodemo/.chainlit/translations/: zh-CN.json
repodemo/llm/api/: codegeex4.py
repodemo/llm/local/: codegeex4.py
repodemo/prompts/: base_prompt.py
repodemo/utils/: bingsearch.py  keep.txt  programming-languages-to-file-extensions.json  tools.py
web_demo/: README.md  README_zh.md  main.py  requirements.txt
web_demo/backend/apis/: api.py  bing.py
web_demo/backend/models/: codegeex.py
web_demo/backend/services/: chat.py
web_demo/backend/utils/: chat.py
