[package]
name = "codegeex4-candle"
version = "0.1.0"
edition = "2021"
authors = ["Donjuan Platinum <donjuan@lecturify.net>"]
license = "GPL-2.0-only"
description = "Codegeex4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# candle-transformers = {path = "../candle/candle-transformers"}
# candle-core = {path = "../candle/candle-core"}
# candle-nn = {path = "../candle/candle-nn"}
#anyhow = "1.0.86"
hf-hub = "0.3.2"
#tokenizer = "0.1.2"
clap = { version = "4.5.6", features = ["derive"] }
#tracing-chrome = "0.7.2"
#candle-examples = {path = "../candle/candle-examples"}
#tracing-subscriber = "0.3.18"
tokenizers = "0.19.1"
serde_json = "1.0.120"
candle-core = "0.6.0"
candle-transformers = "0.6.0"
candle-examples = "0.6.0"
candle-nn = "0.6.0"
safetensors = "0.4.3"
accelerate-src = { version = "0.3.2", optional = true}
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] ,optional = true}
rand = "0.8.5"
owo-colors = "4.0.0"
#safetensors = {path ="../safetensors/safetensors"}
[build-dependencies]
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]
accelerate = ["dep:accelerate-src", "candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["dep:intel-mkl-src", "candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]